--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"autoprefixer": "^10.4.15",
+		"postcss": "^8.4.27",
 		"svelte": "^4.0.0",
+		"tailwindcss": "^3.3.3",
 		"vite": "^4.3.6"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"clsx": "^2.0.0"
+	}
 }
