--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fortawesome/free-brands-svg-icons": "^6.4.2",
+		"@fortawesome/free-solid-svg-icons": "^6.4.2",
 		"clsx": "^2.0.0",
-		"rss-parser": "^3.13.0"
+		"rss-parser": "^3.13.0",
+		"svelte-fa": "^3.0.4"
 	}
 }
